# dfsql

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  df.rs  handler.rs  io.rs  lib.rs  main.rs  sql.rs  sql_parser.rs  visual.rs
src/sql/: expr.rs  lexer.rs  mod.rs  stat.rs
