[package]
name = "dfsql"
version = "0.15.0"
edition = "2024"
description = "SQL REPL for Data Frames"
license = "MIT"
repository = "https://github.com/Banyc/dfsql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", optional = true }
banyc_polars_util = { version = "0.7", optional = true }
chumsky = { version = "=1.0.0-alpha.8" }
clap = { version = "4", features = ["derive"], optional = true }
fancy-regex = { version = "0.14", optional = true }
polars = { version = "0.47", features = [
    "abs",
    "lazy",
    "regex",
    "log",
    "strings",
    "dtype-categorical",
] }
rustyline = { version = "15", features = ["derive"], optional = true }
thiserror = "2"

[features]
default = ["cli"]
cli = ["anyhow", "clap", "fancy-regex", "banyc_polars_util", "rustyline"]
